--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "Elastic-Beanstalk-Sample-App",
-  "version": "0.50.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "adm-zip": "^0.5.5",
     "body-parser": "^1.19.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "fast-deep-equal": "^3.1.3",
     "node-static": "^0.7.11",
     "uuid": "^8.3.0",
     "xml2js": "^0.4.23"
